# gvox-editor

./: .gitignore  CMakeLists.txt  vcpkg.json
cmake/: deps.cmake
src/: main.cpp
src/core/: scene.cpp  scene.hpp
src/renderer/: viewport.cpp  viewport.glsl  viewport.hpp  viewport.inl
src/ui/: app_ui.cpp  app_ui.hpp  app_window.cpp  app_window.hpp
src/ui/rml/: render_daxa.cpp  render_daxa.hpp  system_glfw.cpp
